[feat] added evm service rpc canister, env config and updated deploy

--- a/package.json
+++ b/package.json
@@ -14,5 +14,12 @@
   "type": "module",
   "workspaces": [
     "src/my_canister_project_frontend"
-  ]
+  ],
+  "dependencies": {
+    "azle": "^0.24.1",
+    "ethers": "^6.13.4"
+  },
+  "devDependencies": {
+    "dotenv": "^16.4.5"
+  }
 }
