--- a/src/env/constants.mo.template
+++ b/src/env/constants.mo.template
@@ -1,8 +1,8 @@
 module {
     // Network settings
-    public let CURRENT_NETWORK = "{{network}}";
+    public let CURRENT_NETWORK = "%%CURRENT_NETWORK%%";
 
     // Canister IDs by network
-    public let LOCAL_CANISTER_IDS = "{{local_canister_ids}}";
-    public let IC_CANISTER_IDS = "{{ic_canister_ids}}";
+    public let LOCAL_CANISTER_IDS = "%%LOCAL_CANISTER_IDS%%";
+    public let IC_CANISTER_IDS = "%%IC_CANISTER_IDS%%";
 };
